# TT-RECON

./: .env.example  INSTALL.md  README.md  pyproject.toml
examples/cases/: egfr_example.json
tests/: test_run_egfr.py
ttrecon/: cli.py  config.py  logging.py
ttrecon/connectors/civic/: README.md  __init__.py  client.py  graphql.py  models.py  snapshot.py  util.py
ttrecon/core/: errors.py  ids.py  io.py  models.py  provenance.py
ttrecon/engine/: civic_claims.py  claim_builder.py  feature_builder.py  orchestrator.py  scoring.py
ttrecon/ingest/: case_loader.py  normalize.py  validators.py
ttrecon/llm/: __init__.py  base.py  guardrails.py  narrator.py
ttrecon/pack/: __init__.py  generator.py  templates.py
ttrecon/report/: render_json.py  render_md.py
ttrecon/report/templates/: dossier.md.j2
ttrecon/targets/: registry.py
ttrecon/targets/EGFR/: __init__.py  mappings.yml  rules.py  target.yml
ttrecon/targets/common/: __init__.py  rules_shared.py  vocab.yml
